--- a/formwidgets/formbuilder/partials/_body.htm
+++ b/formwidgets/formbuilder/partials/_body.htm
@@ -7,6 +7,6 @@
                 <?= $this->makePartial('buildingarea') ?>
             </div>
         </div>
-        <div class="layout-cell inspector-container builder-inspector-container" data-inspector-scrollable></div>
+        <div class="layout-cell inspector-container builder-inspector-container" data-inspector-scrollable data-inspector-live-update></div>
     </div>
 </div>
