--- a/widgets/defaultcontroldesigntimeprovider/partials/_control-switch.htm
+++ b/widgets/defaultcontroldesigntimeprovider/partials/_control-switch.htm
@@ -1,4 +1,4 @@
 <div class="builder-blueprint-control-switch">
     <div class="builder-control-label"><?= e(trans($this->getPropertyValue($properties, 'label'))) ?></div>
-    <div class="builder-control-comment-below"><?= e(trans($this->getPropertyValue($properties, 'comment'))) ?>The dataTransfer property is where all the DnD magic happens. Calling e.dataTransfer.setData(format, data) will set the object's content to the mimetype and data payload passed as arguments.</div>
+    <div class="builder-control-comment-below"><?= e(trans($this->getPropertyValue($properties, 'oc.comment'))) ?></div>
 </div>
