--- a/formwidgets/formbuilder/partials/_controlwrapper.htm
+++ b/formwidgets/formbuilder/partials/_controlwrapper.htm
@@ -8,3 +8,5 @@
 
 <input type="hidden" value="<?= e(json_encode($fieldsConfiguration)) ?>" data-inspector-config>
 <input type="hidden" value="<?= e(json_encode($properties)) ?>" data-inspector-values>
+
+<div class="remove-control" data-builder-remove-control>&times;</div>
