--- a/formwidgets/formbuilder/partials/_controllist.htm
+++ b/formwidgets/formbuilder/partials/_controllist.htm
@@ -13,6 +13,7 @@
             class="control <?= e($controlRenderingInfo['spanClass']) ?>"
             data-builder-span="<?= e($controlRenderingInfo['spanFixed']) ?>"
             data-inspectable="true"
+            draggable="true"
             data-control-type="<?= e($controlRenderingInfo['type']) ?>"
             data-inspector-title="<?= e($controlRenderingInfo['title']) ?>"
             data-inspector-description="<?= e($controlRenderingInfo['description']) ?>">
